--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.9.6",
+    "@mantine/form": "^5.9.6",
+    "@mantine/hooks": "^5.9.6",
+    "@mantine/notifications": "^5.9.6",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@vercel/node": "^2.8.2",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
